[tool.poetry]
name = "after-the-i-dos"
version = "0.1.0"
description = ""
authors = ["Destiny Gaines <dgaines92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
gunicorn = "^23.0.0"
twilio = "^9.3.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
