[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
gunicorn = "^23.0.0"
twilio = "^9.3.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114", # Missing module docstring
    "R0903", # Too few public methods
    "W0718", # Catching too general exception
]
